@@ -46,14 +46,14 @@ Alfredo, Java HTTP SPNEGO - Server Side Configuration
   * <<<config.prefix>>>: If specified, all other configuration parameter names must start with the prefix.
     The default value is no prefix.
 
-  * <<<[PREFIX.]authentication.type>>>: the authentication type keyword (<<<simple>> or <<<kerberos>>>) or a
+  * <<<[PREFIX.]type>>>: the authentication type keyword (<<<simple>> or <<<kerberos>>>) or a
     {{{apidocs/com/cloudera/alfredo/server/AuthenticationHandler.html}Authentication handler implementation}}.
 
   * <<<[PREFIX.]signature.secret>>>: The secret to SHA-sign the generated authentication tokens. If a secret is
     not provided a random secret is generated at start up time. If using multiple web application instances
     behind a load-balancer a secret must be set for the application to work properly.
 
-  * <<<[PREFIX.]auth.token.validity>>>: The validity -in seconds- of the generated authentication token. The
+  * <<<[PREFIX.]token.validity>>>: The validity -in seconds- of the generated authentication token. The
     default value is <<<3600>>> seconds.
 
 ** Kerberos Configuration
@@ -63,7 +63,7 @@ Alfredo, Java HTTP SPNEGO - Server Side Configuration
   To use Kerberos SPNEGO as the authentication mechanism, the authentication filter must be configured with the
   following init parameters:
 
-  * <<<[PREFIX.]authentication.type>>>: the keyword <<<kerberos>>>.
+  * <<<[PREFIX.]type>>>: the keyword <<<kerberos>>>.
 
   * <<<[PREFIX.]kerberos.principal>>>: The web-application Kerberos principal name. The Kerberos principal name
     must start with <<<HTTP/...>>>. For example: <<<HTTP/localhost@LOCALHOST>>>.  There is no default value.
@@ -81,7 +81,7 @@ Alfredo, Java HTTP SPNEGO - Server Side Configuration
         <filter-name>kerberosFilter</filter-name>
         <filter-class>com.cloudera.alfredo.server.AuthenticationFilter</filter-class>
         <init-param>
-            <param-name>authentication.type</param-name>
+            <param-name>type</param-name>
             <param-value>kerberos</param-value>
         </init-param>
         <init-param>
@@ -93,7 +93,7 @@ Alfredo, Java HTTP SPNEGO - Server Side Configuration
             <param-value>/tmp/alfredo.keytab</param-value>
         </init-param>
         <init-param>
-            <param-name>auth.token.validity</param-name>
+            <param-name>token.validity</param-name>
             <param-value>30</param-value>
         </init-param>
     </filter>
@@ -112,9 +112,9 @@ Alfredo, Java HTTP SPNEGO - Server Side Configuration
   To use Pseudo/Simple as the authentication mechanism (trusting the value of the query string parameter
   'user.name'), the authentication filter must be configured with the following init parameters:
 
-  * <<<[PREFIX.]authentication.type>>>: the keyword <<<simple>>>.
+  * <<<[PREFIX.]type>>>: the keyword <<<simple>>>.
 
-  * <<<[PREFIX.]annonymous.allowed>>>: is a boolean parameter that indicates if annonymous requests are allowed
+  * <<<[PREFIX.]simple.annonymous.allowed>>>: is a boolean parameter that indicates if annonymous requests are allowed
     or not. The default value is <<<false>>>.
 
   *<<Example>>:
@@ -127,15 +127,15 @@ Alfredo, Java HTTP SPNEGO - Server Side Configuration
         <filter-name>simpleFilter</filter-name>
         <filter-class>com.cloudera.alfredo.server.AuthenticationFilter</filter-class>
         <init-param>
-            <param-name>authentication.type</param-name>
+            <param-name>type</param-name>
             <param-value>simple</param-value>
         </init-param>
         <init-param>
-            <param-name>annonymous.allowed</param-name>
+            <param-name>simple.annonymous.allowed</param-name>
             <param-value>false</param-value>
         </init-param>
         <init-param>
-            <param-name>auth.token.validity</param-name>
+            <param-name>token.validity</param-name>
             <param-value>30</param-value>
         </init-param>
     </filter>
